# book-keeper

./: .gitignore  LICENSE  README.md  README_EN.md  architecture_blueprint.md  schema.json  test.txt  test_login.bat  test_register.bat  test_server.bat
.github/workflows/: build-backend.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  records.db
backend/src/: db.rs  handlers.rs  main.rs  models.rs
frontend/: settings.gradle.kts
frontend/app/: build.gradle.kts  proguard-rules.pro
frontend/app/debug/: output-metadata.json
frontend/app/release/: output-metadata.json
frontend/app/release/baselineProfiles/0/: app-release.dm
frontend/app/release/baselineProfiles/1/: app-release.dm
frontend/app/src/androidTest/java/com/example/book_keeper/: ExampleInstrumentedTest.kt
frontend/app/src/main/: AndroidManifest.xml
frontend/app/src/main/java/com/example/book_keeper/: MainActivity.kt
frontend/app/src/main/java/com/example/book_keeper/network/: ApiClient.kt  ApiService.kt  TokenManager.kt
frontend/app/src/main/java/com/example/book_keeper/sync/: SettingsSyncWorker.kt  SyncManager.kt  SyncWorker.kt
frontend/app/src/main/java/com/example/book_keeper/ui/: AuthScreen.kt  ExpenseScreen.kt  MainScaffold.kt  Screen.kt
frontend/app/src/main/java/com/example/book_keeper/utils/: DateUtils.kt  FileUtils.kt  UserManager.kt  (+2 more)
frontend/app/src/main/res/values/: strings.xml  themes.xml
frontend/app/src/main/res/values-zh-rCN/: strings.xml
frontend/app/src/main/res/values-zh-rTW/: strings.xml
frontend/app/src/test/java/com/example/book_keeper/: ExampleUnitTest.kt
(+10 files in other folders)
