[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.50.0", features = ["full"] }
